# AdventOfCode

./: .gitignore  README.md
2020/day1/: Cargo.toml
2020/day1/part1/: Cargo.toml
2020/day1/part1/src/: main.rs
2020/day1/part2/: Cargo.toml
2020/day1/part2/src/: main.rs
2020/day1/src/: main.rs
2020/day2/part1/: Cargo.toml
2020/day2/part1/src/: main.rs
2020/day2/part2/: Cargo.toml
2020/day2/part2/src/: main.rs
2020/day3/part1/: Cargo.toml
2020/day3/part1/src/: main.rs
2020/day3/part2/: Cargo.toml
2020/day3/part2/src/: main.rs
2020/day4/: test
2020/day4/part1/: Cargo.toml
2020/day4/part1/src/: main.rs
2020/day4/part2/: Cargo.toml
2020/day4/part2/src/: main.rs
2020/day5/part1/: Cargo.toml
2020/day5/part1/src/: main.rs
2020/day5/part2/: Cargo.toml
2020/day5/part2/src/: main.rs
2020/day6/part1/: Cargo.toml
2020/day6/part1/src/: main.rs
2020/day6/part1_bench_consts/: Cargo.toml
2020/day6/part1_bench_consts/src/: main.rs
2020/day6/part1_bench_func/: Cargo.toml
2020/day6/part1_bench_func/src/: main.rs
2020/day6/part1_cpp/: main.cpp
2020/day6/part2/: Cargo.toml
2020/day6/part2_revise/: Cargo.toml
2021/day1/part1/: Cargo.toml
2021/day1/part1hs/: part1hs.cabal
2021/day16/part1/: Cargo.toml
2021/day16/part2/: Cargo.toml
2021/day16/part2/benches/: d16p2.rs
2021/day16/part2/src/: lib.rs  main.rs  nibble.rs  packet.rs  util.rs
2021/day2/part1/: Cargo.toml
2021/day2/part2/: Cargo.toml
2021/day3/part1/: Cargo.toml
2021/day3/part1/src/: main.rs
2021/day3/part2/: Cargo.toml
2021/day7/part1/: Cargo.toml
(+11 files in other folders)
