[package]
name = "day16_part2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "d16p2"
harness = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1