[package]
name = "day3_part1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
align-data = "^0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
#debug = true

[profile.bench]
#debug = false

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
